--- a/TRAVEL_WEB_3/navigate.html
+++ b/TRAVEL_WEB_3/navigate.html
@@ -45,6 +45,9 @@
         <div class="navigate">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7776.899949011088!2d77.60254399086007!3d12.94303317525101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae157e99cf6aa5%3A0xeb90ce8508633b4b!2sRay%20Center%20-%20Wilson%20Garden%20Swimming%20Pool!5e0!3m2!1sen!2sin!4v1722000194385!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+         <div class="navigate2">
+        <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=77.5459671020508%2C12.92066338803538%2C77.62630462646486%2C12.977125813772892&amp;layer=mapnik&amp;marker=12.948896200093982%2C77.58613586425781" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=12.9489&amp;mlon=77.5861#map=14/12.9489/77.5861">View Larger Map</a></small>
+      </div>
     </main>
 </body>
 </html>
